--- a/themes/perevozkin/sass/screen.scss
+++ b/themes/perevozkin/sass/screen.scss
@@ -49,6 +49,7 @@ $btns-layout: vertical;
 @import "_placeholders";
 @import "_common";	//общие стили 
 @import "_buttons";
+@import "_common1";
 
 @import "_stages-block";
 @import "_statistic-block";
