--- a/themes/perevozkin/css/screen.css
+++ b/themes/perevozkin/css/screen.css
@@ -922,6 +922,10 @@ label, .modal-content label, .c_697f9a, .stages-block .title, .benefits-block .h
   color: #697f9a;
 }
 
+.c_71a72c {
+  color: #71a72c;
+}
+
 .c_757575, .requests1-list-head-item {
   color: #757575;
 }
@@ -1329,7 +1333,7 @@ h1, .narrow_bold_24, .map-block .info span, .modal-title, .select-user-type-lbl,
   font-family: 'ptsans-narrow-bold', sans-serif;
 }
 
-h1 span, .breadcrumbs, .narrow-regular-24, .narrow-regular-18, .narrow-regular-16, .narrow-regular-20, .statistic-block li, .benefits-block .header, .benefits-block li span, .last-requests .header, .radnom-reviews .header, .my-last-requests-title span, .header-row2 .questions, .footer .questions .title {
+h1 span, .breadcrumbs, .narrow-regular-16, .narrow-regular-18, .narrow-regular-20, .narrow-regular-24, .statistic-block li, .benefits-block .header, .benefits-block li span, .last-requests .header, .radnom-reviews .header, .my-last-requests-title span, .header-row2 .questions, .footer .questions .title {
   font-family: 'ptsans-narrow-regular', sans-serif;
 }
 
@@ -1995,6 +1999,14 @@ button.close:hover {
 
 .pb-20 {
   padding-bottom: 20px;
+}
+
+.pl-10 {
+  padding-left: 10px;
+}
+
+.pl-20 {
+  padding-left: 20px;
 }
 
 .pl-30 {
