--- a/themes/perevozkin/sass/_common1.scss
+++ b/themes/perevozkin/sass/_common1.scss
@@ -1,6 +1,7 @@
-.narrow-regular-24 {
+
+.narrow-regular-16 {
 	@extend %pt_sans_narrow_regular;
-	@extend %font_24;
+	@extend %font_16;
 }
 
 .narrow-regular-18 {
@@ -8,15 +9,16 @@
 	@extend %font_18;
 }
 
-.narrow-regular-16 {
-	@extend %pt_sans_narrow_regular;
-	@extend %font_16;
-}
-
 .narrow-regular-20 {
 	@extend %pt_sans_narrow_regular;
 	@extend %font_20;
 }
+
+.narrow-regular-24 {
+	@extend %pt_sans_narrow_regular;
+	@extend %font_24;
+}
+
 
 .narrow-bold-18 {
 	@extend %pt_sans_narrow_bold;
@@ -53,6 +55,7 @@
 .c_1e91da { @extend %c_1e91da; }
 .c_2e3c54 { @extend %c_2e3c54; }
 .c_697f9a { @extend %c_697f9a; }
+.c_71a72c { @extend %c_71a72c; }
 .c_757575 { @extend %c_757575; }
 .c_8e95a1 { @extend %c_8e95a1; }
 .c_fff { @extend %c_fff; }
@@ -113,6 +116,8 @@
 .pb-15 { padding-bottom: 15px; }
 .pb-20 { padding-bottom: 20px; }
 
+.pl-10 { padding-left: 10px; }
+.pl-20 { padding-left: 20px; }
 .pl-30 { padding-left: 30px; }
 
 .lh-34 { line-height: 34px; }
