--- a/themes/perevozkin/sass/_common.scss
+++ b/themes/perevozkin/sass/_common.scss
@@ -682,3 +682,18 @@ button.close {
 	
 	
 }
+
+.hscrollerbar {
+	@include background-image(linear-gradient(#2ebffe, #268af0));
+	
+//	@extend %pos_rel;
+//	
+//	&:before {
+//		@extend %c_fff;
+//		@extend %pos_abs;
+//		
+//		content: '| | | | |';
+//		left: 50%;
+//		margin-left: -20px;
+//	}
+}
