--- a/themes/perevozkin/sass/_my-requests.scss
+++ b/themes/perevozkin/sass/_my-requests.scss
@@ -114,3 +114,31 @@
     
     
 }
+
+.profile-requests-block {
+	.col1 {
+		width: 8%;
+	}
+	.col2 {
+		width: 20%;
+	}
+	.col3 {
+		width: 8%;
+	}
+	.col4 {
+		width: 15%;
+	}
+	.col5 {
+		width: 10%;
+	}
+	.col6 {
+		width: 15%;
+	}
+	.col7 {
+		width: 24%;
+	}
+}
+
+.review-perevoz-ttl {
+	width: 77px;
+}
