--- a/themes/perevozkin/sass/_placeholders.scss
+++ b/themes/perevozkin/sass/_placeholders.scss
@@ -28,6 +28,7 @@
 %c_96a5b8 { color: #96a5b8; }
 %c_aab1ba { color: #aab1ba; }
 %c_b8b8b8 { color: #b8b8b8; }
+%c_c3c8cd { color: #c3c8cd; }
 %c_cbe0eb { color: #cbe0eb; }
 %c_ccd3d7 { color: #ccd3d7; }
 %c_eb4c4c { color: #eb4c4c; }
